# AniSync

./: .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: a1b2c3d4e5f6_add_users_and_user_anime_list.py  b366de7a638c_initial_anime_model.py
app/: .env  config.py  database.py  dependencies.py  main.py
app/alembic/: env.py
app/api/: anime.py  auth.py  users.py
app/models/: __init__.py  anime.py  genre.py  user.py  user_anime_list.py
app/repositories/: anime_repo.py  genre_repo.py  user_anime_list_repo.py  user_repo.py
app/schemas/: anime.py  auth.py  user.py  user_anime_list.py
app/services/: anime_service.py  auth_service.py
app/tasks/: anime_tasks.py  broker.py
app/utils/: jwt.py
